✅ Auto deployed bug fixed

--- a/Linux/jenkins-update-through-ansible.yaml
+++ b/Linux/jenkins-update-through-ansible.yaml
@@ -7,23 +7,32 @@
 
   - name: Find existing Jenkins WAR file
     shell: "find / -type f -name jenkins.war 2>/dev/null"
-    register: jenkins_war_location
+    register: jenkins_war_locations
+    ignore_errors: yes
 
   - name: Download latest Jenkins WAR file
     get_url:
-      url: https://updates.jenkins.io/download/war/2.426.3/jenkins.war
+      url: https://updates.jenkins.io/download/war/2.440.1/jenkins.war
       dest: /tmp/jenkins.war
+      force: yes
 
   - name: Stop Jenkins service
     service:
      name: jenkins
      state: stopped
 
-  - name: Copy new Jenkins WAR file
+  - name: Transfer Jenkins WAR file to remote host
+    synchronize:
+      src: "/tmp/jenkins.war"
+      dest: "/tmp/jenkins.war"
+      mode: pull
+
+  - name: Copy new Jenkins WAR file to all locations
     copy:
-      src: /tmp/jenkins.war
-      dest: "{{ jenkins_war_location.stdout.split('\n')[0] }}"
-    when: jenkins_war_location.stdout !=""
+      src: "/tmp/jenkins.war"
+      dest: "{{ item }}"
+    loop: "{{ jenkins_war_locations.stdout_lines }}"
+    when: jenkins_war_locations.stdout != ""
 
   - name: Start Jenkins service  
     service:
